fixed css footer spacing, fixed css or presentation pages, fixed sizing on database diagrams images

--- a/styles/site.css
+++ b/styles/site.css
@@ -32,6 +32,7 @@ main {
 }
 
 footer {
+  padding-left: 15%;
   padding: 5%;
   background-color: var(--nav-background-color);
   color: var(--text-color-light);
